force-app/main/default/objects/Delivery_Order__c/Delivery_Order__c.object-meta.xml
<CustomObject>
    <label>Delivery Order</label>
    <nameField>
        <displayFormat>DO-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>