force-app/main/default/objects/Delivery_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Orders</relationshipLabel>
    <relationshipName>Delivery_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>