force-app/main/default/objects/Delivery_Order__c/fields/Delivery_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Indicator__c</fullName>
    <formula>IF(
    Days_Remaining__c &gt; 2,
    &quot;🟢 Verde&quot;,
    IF(
        Days_Remaining__c &gt;= 0,
        &quot;🟡 Amarelo&quot;,
        &quot;🔴 Vermelho&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Indicator</label>
    <type>Text</type>
</CustomField>