force-app/main/default/objects/Delivery_Order__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>