force-app/main/default/objects/Delivery_Order__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Delivery Orders</relationshipLabel>
    <relationshipName>Delivery_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>