force-app/main/default/objects/Delivery_Order__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>