force-app/main/default/objects/Delivery_Order__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Urgente</fullName>
            </value>
            <value>
                <fullName>Expressa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>