force-app/main/default/objects/Delivery_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criado</fullName>
                <default>true</default>
                <label>Criado</label>
            </value>
            <value>
                <fullName>Em preparação</fullName>
            </value>
            <value>
                <fullName>Em rota</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>