force-app/main/default/objects/Delivery_Order__c/validationRules/VR_Block_Edit_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Block_Edit_In_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

    NOT($Permission.Manage_Delivery_Orders),

    NOT(ISNEW()),

    OR(

        ISPICKVAL(PRIORVALUE(Status__c), &quot;Em rota&quot;),

        ISPICKVAL(PRIORVALUE(Status__c), &quot;Entregue&quot;)

    )

)</errorConditionFormula>
    <errorMessage>Pedidos Em rota ou Entregues só podem ser alterados por Supervisores ou Administradores.</errorMessage>
</ValidationRule>