force-app/main/default/objects/Delivery_Order__c/validationRules/VR_Blocked_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Blocked_Customer</fullName>
    <active>true</active>
    <description>Validando para quando um cliente estiver bloquado não ser possível efetivar um pedido novo.</description>
    <errorConditionFormula>ISPICKVAL( Account__r.Status__c , &quot;Bloqueado&quot;)</errorConditionFormula>
    <errorMessage>Não é possível criar pedidos para clientes bloqueados.</errorMessage>
</ValidationRule>