force-app/main/default/objects/Delivery_Order__c/validationRules/VR_Start_Route_Requires_Driver_And_Vehic.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Start_Route_Requires_Driver_And_Vehic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Em rota&quot;),
    OR(
        ISBLANK(Driver__c),
        ISBLANK(Vehicle__c)
    )
)</errorConditionFormula>
    <errorMessage>Para iniciar uma rota é obrigatório informar um motorista e um veículo.</errorMessage>
</ValidationRule>