force-app/main/default/objects/Delivery_Order__c/validationRules/VR_Weight_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Weight_Positive</fullName>
    <active>true</active>
    <description>Validando o peso dos veículos para não aceitar negativo</description>
    <errorConditionFormula>Weight__c    &lt;=  0</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>O peso não deve ser negativo nem 0</errorMessage>
</ValidationRule>